<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.innertalk.StartFragment"
        android:label="@string/label_start"
        tools:layout="@layout/fragment_start" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.innertalk.StatisticsFragment"
        android:label="@string/label_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/configFragment"
        android:name="com.example.innertalk.ConfigFragment"
        android:label="@string/label_config"
        tools:layout="@layout/fragment_config" />
    <fragment
        android:id="@+id/newEntryFragment"
        android:name="com.example.innertalk.NewEntryFragment"
        android:label="@string/label_new_entry"
        tools:layout="@layout/fragment_new_entry" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.innertalk.ui.ChatFragment"
        android:label="@string/label_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_chatFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
</navigation>